add node engines

--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "when-to-leave",
   "version": "1.0.0",
   "description": "",
+  "engines": {
+    "node": "5.3",
+    "npm": "3.10"
+  },
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
