--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   },
   "homepage": "https://github.com/songawee/when-to-leave#readme",
   "dependencies": {
-    "firebase": "^3.0.5"
+    "firebase": "^3.0.5",
+    "moment": "^2.13.0",
+    "request": "^2.72.0"
   }
 }
